@@ -1,7 +1,7 @@
 [system]
 N = 8
 m = 5
-kred = 0,1
+kred = 0,1,2
 
 [hamiltonian]
 de = 10
