@@ -5,6 +5,7 @@ import argparse
 parser = argparse.ArgumentParser()
 parser.add_argument("-p","--plot", help="plot only", action="store_true")
 parser.add_argument("-pd","--plot-data", help="plot data", action="store_true")
+parser.add_argument("-pt","--plot-timescale", help="plot timescales", action="store_true")
 parser.add_argument("-pa","--plot-animation", help="plot animation", action="store_true")
 parser.add_argument("-poe","--plot-occen", help="plot occupation operator matrices in energy eigenbasis", action="store_true")
 parser.add_argument("-pods","--plot-odsingles", help="plot single off diagonals", action="store_true")
@@ -13,7 +14,7 @@ args = parser.parse_args()
 #coarse benchmarking for preparations
 t0 = tm.time()
 
-if args.plot or args.plot_data or args.plot_animation or args.plot_occen or args.plot_odsingles:
+if args.plot or args.plot_data or args.plot_animation or args.plot_occen or args.plot_odsingles or args.plot_timescale:
     plotBool = True
 else:
     plotBool = False
@@ -27,6 +28,11 @@ if args.plot:
 if args.plot_data:
     if sysVar.boolPlotData:
         sysVar.plotData()
+    exit()
+
+if args.plot_timescale:
+    if sysVar.boolPlotTimescale:
+        sysVar.plotTimescale()
     exit()
 
 if args.plot_animation:
@@ -45,7 +51,7 @@ if args.plot_odsingles:
     if sysVar.boolPlotOffDiagSingles:
         sysVar.plotOffDiagSingles()
     exit()
-
+    
 print("Dimension of the basis:",sysVar.dim)
 
 #initially occupied states with relative weight (entanglement of starting state):
@@ -65,8 +71,7 @@ if sysVar.boolRetgreen:
 #start with all particles in 0th state
 for el in initstates:
     tmp = sysVar.basisDict[el[0]]
-    sysVar.state[tmp, 0] = el[1]
-#sysVar.state[0,0] = 1
+    sysVar.state[tmp] = el[1]
 sysVar.normalize(True)
 
 
